Fix for issue where pod template is clipped at mobile res. 	- fix https://github.com/openshift/origin/issues/4489 	- switch to pf-image icon 	- correct icon alignment in pod template 	- align label and meta data on overview

--- a/assets/app/styles/_components.less
+++ b/assets/app/styles/_components.less
@@ -48,9 +48,10 @@
     position: relative;
     .osc-object-highlight();
     .component-label {
-      text-transform: uppercase;
-      font-size: 11px;
       color: @gray-light;
+      font-size: @component-label;
+      line-height: @line-height-base;
+      text-transform: uppercase;
       + span {
         margin-left: 5px;
       }
@@ -69,9 +70,6 @@
       &.pod-container {
         .flex-direction(@direction: row);
       }
-      &.pod-template-container {
-        margin-top: 5px;
-      }
       &.component-meta {
         margin: 4px 0 6px;
       }
@@ -82,18 +80,16 @@
         }
         h2,h3 {
           margin: 0 0 5px;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          line-height: 1.3;
-          white-space: nowrap;
+          .truncate();
         }
         &.meta-data {
           @media (min-width: @screen-sm-min) {
             // assign flex properties when >768 for proper layout then .component divs will stack at mobile by default
             .flex(@columns: 1);
           }
+          font-size: @component-label + 1;
           text-align: right;
-          line-height: 1.3em;
+          line-height: @line-height-base;
           .align-self(@align: left);
           color: @gray-light;
           @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max), (max-width: 380px) {
@@ -153,18 +149,8 @@
     h4 {
       margin: 5px 0;
     }
-    .fa {
-      margin-right: 5px;
-      // Make sure the icons are exactly the same width so the labels align.
-      width: 13px;
-    }
     .pod-template-build {
       .word-break();
-    }
-  }
-  .pod-template-ports {
-    .font-icon-block {
-      margin-right: 8px;
     }
   }
 }
@@ -208,7 +194,6 @@
     .flex-direction(@direction: row);
     .flex-wrap(@wrap: wrap);
     .justify-content(@justify: flex-start);
-    margin-top: 5px;
     &.pod-container-lg {
       .pod {
         width: 70px;
