--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -563,9 +563,8 @@ select:invalid {
 }
 
 .truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  // Bootstrap mixin
+  .text-overflow();
 }
 
 .break-word {
