--- a/assets/app/styles/_mixins.less
+++ b/assets/app/styles/_mixins.less
@@ -34,15 +34,6 @@
     7px 7px 0 rgba(0, 0, 0, 0.2);  
 }
 
-// Requires inline-block or block
-// FIXME: Replace with Bootstrap text-overflow() ?
-// http://getbootstrap.com/css/#less-mixins-utility
-.truncate() {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .font-family-monospace() {
   font-family: Menlo, Monaco, "Liberation Mono", Consolas, monospace;
 }
